Finished initial dev

--- a/intro.html
+++ b/intro.html
@@ -3,5 +3,5 @@
 	<h3>At-Home with the Bronx Zoo</h3>
 	<h2>Virtual Zootopia</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-	<p><a href="/" class="btn-fill-tiger btn-large">Support the Zoo</a>
+	<p><a href="https://secure.wcs.org/donate/show-up-for-the-zoo" class="btn-fill-tiger btn-large">Support the Zoo</a>
 </div>
