--- a/support.html
+++ b/support.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<h2>Other Ways to Support</h2>
 		<div class="justify-center container margin-standard-bottom pad-0-horizontal -section grid grid-full grid-medium-half grid-medium-third blocks">
-			<div class="block pad-1-horizontal margin-4-bottom cell">
+			<div class="block pad-1-horizontal margin-4-bottom cell ken-burns-hover">
 				<div class="grid">
 					<div class="block__image cell block__image--with-text">
 						<a href="https://secure.wcs.org/campaign/tell-congress-cultural-organizations-need-emergency-relief">
@@ -18,7 +18,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="block pad-1-horizontal margin-4-bottom cell">
+			<div class="block pad-1-horizontal margin-4-bottom cell ken-burns-hover">
 				<div class="grid">
 					<div class="block__image cell block__image--with-text">
 						<a href="https://secure.wcs.org/donate/show-up-for-the-zoo">
@@ -34,7 +34,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="block pad-1-horizontal margin-4-bottom cell">
+			<div class="block pad-1-horizontal margin-4-bottom cell ken-burns-hover">
 				<div class="grid">
 					<div class="block__image cell block__image--with-text">
 						<a href="https://bronxzoo.com/adopt">
