--- a/virtual-classroom.html
+++ b/virtual-classroom.html
@@ -1,5 +1,6 @@
 <div class="zootopia-two-panel zootopia-two-panel--classroom">
 	<div class="zootopia-two-panel__image">
+		<div class="zootopia-two-panel__image__spacer"></div>
 	</div>
 	<div class="zootopia-two-panel__content">
 		<h3>Enjoy At-home Learning</h3>
