--- a/the-zoo.html
+++ b/the-zoo.html
@@ -1,5 +1,6 @@
 <div class="zootopia-two-panel zootopia-two-panel--the-zoo">
 	<div class="zootopia-two-panel__image">
+		<div class="zootopia-two-panel__image__spacer"></div>
 	</div>
 	<div class="zootopia-two-panel__content">
 		<h3>Animal Planet's</h3>
