Mobile style fixes and content adjustments

--- a/support.html
+++ b/support.html
@@ -5,16 +5,16 @@
 			<div class="block pad-1-horizontal margin-4-bottom cell ken-burns-hover">
 				<div class="grid">
 					<div class="block__image cell block__image--with-text">
-						<a href="https://secure.wcs.org/campaign/tell-congress-cultural-organizations-need-emergency-relief">
+						<a href="https://bronxzoo.com/shop/catalogs/gifts">
 							<figure class="figure
 								aspect-1-1" itemscope="" itemtype="http://schema.org/ImageObject">
 								<img class="image-fluid" alt="" itemprop="image" src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/03/30/21kplchfj1_Julie_Larsen_Maher_2714_Teen_Camp_BXR_BZ_08_25_15_1.jpg">
 							</figure>
 						</a>
 					</div>
-					<a class="block__description cell" href="https://secure.wcs.org/campaign/tell-congress-cultural-organizations-need-emergency-relief">
-						<h4>Emergency Relief</h4>
-						<h3>Take Action</h3>
+					<a class="block__description cell" href="https://bronxzoo.com/shop/catalogs/gifts">
+						<h4>The Perfect Gift</h4>
+						<h3>A Future Visit</h3>
 					</a>
 				</div>
 			</div>
@@ -45,7 +45,7 @@
 						</a>
 					</div>
 					<a class="block__description cell" href="https://bronxzoo.com/adopt">
-						<h4>The Perfect Gift</h4>
+						<h4>Become an Expert</h4>
 						<h3>Adopt an Animal</h3>
 					</a>
 				</div>
