--- a/updates.html
+++ b/updates.html
@@ -1,14 +1,16 @@
 <div class="zootopia-updates">
 	<div class="container">
 		<div class="zootopia-updates__media">
-			<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/03/30/217zjvnr63_Julie_Larsen_Maher_4831_Little_Blue_Penguins_and_Chick_with_Gonzalez_Nancy_ABH_BZ_02_27_20_1.jpg" alt="Little Blue Penguin">
+			<div class="aspect-16-9 relative">
+				<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fbronxzoo%2Fvideos%2F197912028179273%2F&show_text=0&width=560" width="100%" height="100%" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+			</div>
 		</div>
 		<div class="zootopia-updates__left">
 			<h3>The Latest</h3>
 			<h2>Little Penguin Chicks</h2>
 		</div>
 		<div class="zootopia-updates__right">
-			<p>Melted cheese blue castello manchego. Paneer dolcelatte caerphilly cheesy grin queso fondue cheesy feet roquefort. Camembert de normandie st. agur blue cheese port-salut airedale camembert de normandie the big cheese cauliflower cheese bavarian bergkase. Hard cheese squirty cheese fromage who moved my cheese who moved my cheese.</p>
+			<p>Have you heard the good news? We have two little penguin chicks at the Bronx Zoo! These are our first chicks since our colony doubled in size earlier this year, which means the two groups of birds are adjusting well. We’ll be updating you on their journey weekly, be sure to follow along for all the cute and conservation updates.</p>
 		</div>
 		<hr>
 		<div class="zootopia-updates__left zootopia-updates__left--previous-posts">
