--- a/virtual-classroom.html
+++ b/virtual-classroom.html
@@ -5,7 +5,7 @@
 	<div class="zootopia-two-panel__content">
 		<h3>Enjoy At-home Learning</h3>
 		<h2>Virtual Classroom</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-		<p><a href="#" class="btn-fill-tiger">View all Lessons</a>
+		<p>Whether you’re looking for a lesson plan, or a science experiment for your youngster, our education team has you covered. Take a look at what’s new and what’s coming up.</p>
+		<p><a href="https://bronxzoo.com/learn/educators/digital-resources" class="btn-fill-tiger">View all Lessons</a>
 	</div>
 </div>
