--- a/zen.html
+++ b/zen.html
@@ -3,20 +3,20 @@
 		<div class="zootopia-zen__content">
 			<h3>Creature Comforts</h3>
 			<h2>Moment of Zen</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+			<p>Sometimes you just need to stare at some animals and relax. We’ve got you covered. We’ll be updating you with some of the most zen-like moments from around the park. Turn the volume up to immerse yourself in nature and enjoy.</p>
 			<p>
-				<a href="https://www.instagram.com/bronxzoo/" target="_blank" class="btn-fill-tiger btn">
+				<a href="https://www.facebook.com/bronxzoo" target="_blank" class="btn-fill-tiger btn">
 					<svg class="icon tile-icon color-polar" height="32" width="32" viewBox="0 0 32 32" aria-hidden="true" role="presentation" tabindex="-1" disabled="disabled" clickable="false">
-						<use xlink:href="#icon-instagram"></use>
+						<use xlink:href="#icon-facebook"></use>
 						<rect x="0" y="0" width="32" height="32" fill="transparent"></rect>
-						<title>Instagram</title>
+						<title>Facebook</title>
 					</svg>
 					Follow @BronxZoo
 				</a>
 			</p>
 		</div>
 		<div class="zootopia-zen__media aspect-16-9 relative">
-			<iframe src="https://player.vimeo.com/video/313284588?title=0&byline=0&portrait=0" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fbronxzoo%2Fvideos%2F217555339349682%2F&show_text=0&width=560" width="100%" height="100%" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
 		</div>
 	</div>
 </div>
