--- a/support.html
+++ b/support.html
@@ -13,7 +13,7 @@
 						</a>
 					</div>
 					<a class="block__description cell" href="https://bronxzoo.com/shop/catalogs/gifts">
-						<h4>The Perfect Gift</h4>
+						<h4>Come See Us</h4>
 						<h3>A Future Visit</h3>
 					</a>
 				</div>
@@ -45,7 +45,7 @@
 						</a>
 					</div>
 					<a class="block__description cell" href="https://bronxzoo.com/adopt">
-						<h4>Become an Expert</h4>
+						<h4>The Perfect Gift</h4>
 						<h3>Adopt an Animal</h3>
 					</a>
 				</div>
