--- a/the-zoo.html
+++ b/the-zoo.html
@@ -6,6 +6,6 @@
 		<h3>Animal Planet's</h3>
 		<h2>The Zoo</h2>
 		<p>New episodes of The Zoo premiere April 4 at 9pm ET! Be sure to tune in for another season.</p>
-		<p><a href="/the-zoo" class="btn-fill-tiger">Watch Full Episodes</a>
+		<p><a href="/the-zoo" class="btn-fill-tiger">Learn More</a>
 	</div>
 </div>
