--- a/cams-landing-page.html
+++ b/cams-landing-page.html
@@ -1,16 +1,22 @@
+<!-- Intro -->
+
 <link rel="stylesheet" href="https://s3.amazonaws.com/wcs-cms/bz-zootopia.css">
 <div class="zootopia-intro">
 	<h3>Stay Connected from Home</h3>
 	<h2>Live Cams</h2>
 	<p>Check in on some of your favorite animals while you stay safe at home. Turn the volume up and enjoy the sights and sounds of the parks.</p>
 </div>
+
+<!-- BZ Section -->
+
 <div class="zootopia-cams fill-paper fill-cloud">
 	<div class="container">
 		<h2 class="color-blue">Bronx Zoo</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+		<p>Check out a few of our favorite hotspots at the zoo, the sea lions on Astor Court, the lemurs at Madagascar!, and the little penguin exhibit inside the Aquatic Bird House. Be sure to turn your volume up!</p>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/79FImSLmwr?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Madagascar!</h3>
@@ -18,32 +24,49 @@
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/7r0bBuEdpu?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/934mtctshq_little_blue_cam.jpg" align="Our cameras are currently offline. Please check back later">
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/9jwmkwvk3t_little_penguin.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Aquatic Bird House</h3>
 		</div>
+		<div class="zootopia-cams__feed">
+			<div class="aspect-16-9 relative">
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Dn6nON8SjP?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+			</div>
+			<h3>Sea Lion Pool</h3>
+		</div>
 	</div>
 </div>
+
+<!-- NYA Section -->
+
 <div class="zootopia-cams color-polar fill-ocean">
 	<div class="container">
 		<h2>New York Aquarium</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+		<p>Transport yourself to Ocean Wonders: Sharks! and you’ll be mesmerized by sharks, sturgeon, and rays. Or enjoy a sneak peek of our newest exhibit, Spineless, featuring the giant Pacific octopus.</p>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
-				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/79FImSLmwr?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Tpts9NCJb9?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/8ypxb4qhil_live_cam_shark_off.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/71jrfiovkd_live_cam_shark.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
-			<h3>Madagascar!</h3>
+			<h3>Ocean Wonders: Sharks!</h3>
 		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
-				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/7r0bBuEdpu?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/9jwmkwvk3t_little_penguin.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/zxUH0ETcDK?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/31umtdb2af_live_cam_octopus_off.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/8gtnz1ip2f_live_cam_octopus.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
-			<h3>Aquatic Bird House</h3>
+			<h3>Spineless</h3>
 		</div>
 	</div>
 </div>
+
+<!-- Support Section -->
+
 <div class="zootopia-support">
 	<div class="container">
 		<h2>Support our Parks</h2>
