--- a/cams.html
+++ b/cams.html
@@ -5,18 +5,20 @@
 		<p>Check in on some of your favorite animals while you stay safe at home. Turn the volume up and enjoy the sights and sounds of the parks.</p>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
-				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/79FImSLmwr?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Dn6nON8SjP?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
-			<h3>Madagascar!</h3>
+			<h3>Sea Lion Pool</h3>
 		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/7r0bBuEdpu?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/934mtctshq_little_blue_cam.jpg" align="Our cameras are currently offline. Please check back later">
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/9jwmkwvk3t_little_penguin.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Aquatic Bird House</h3>
 		</div>
-		<!--<p><a href="/virtual-zoo/live-cams" class="btn-fill-tiger">View More</a>-->
+		<p><a href="/virtual-zoo/live-cams" class="btn-fill-tiger">View More</a>
 	</div>
 </div>
