--- a/cams-landing-page.html
+++ b/cams-landing-page.html
@@ -15,11 +15,12 @@
 		<p>Check out a few of our favorite hotspots at the zoo, the sea lions on Astor Court, the lemurs at Madagascar!, and the little penguin exhibit inside the Aquatic Bird House. Be sure to turn your volume up!</p>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
-				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/79FImSLmwr?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Dn6nON8SjP?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
-			<h3>Madagascar!</h3>
+			<h3>Sea Lion Pool</h3>
+			<p>Tune into feedings daily at 12:00pm and 3:00pm EDT</p>
 		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
@@ -28,14 +29,15 @@
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/9jwmkwvk3t_little_penguin.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Aquatic Bird House</h3>
+			<p>Tune into feedings daily at 11:00am and 3:00pm EDT</p>
 		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
-				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Dn6nON8SjP?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/79FImSLmwr?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
-			<h3>Sea Lion Pool</h3>
+			<h3>Madagascar!</h3>
 		</div>
 	</div>
 </div>
