--- a/cams.html
+++ b/cams.html
@@ -10,6 +10,7 @@
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Sea Lion Pool</h3>
+			<p>Tune into feedings daily at 12:00pm and 3:00pm EDT</p>
 		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
@@ -18,6 +19,7 @@
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/9jwmkwvk3t_little_penguin.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Aquatic Bird House</h3>
+			<p>Tune into feedings daily at 11:00am and 3:00pm EDT</p>
 		</div>
 		<p><a href="/virtual-zoo/live-cams" class="btn-fill-tiger">View More</a>
 	</div>
