--- a/cams.html
+++ b/cams.html
@@ -3,6 +3,7 @@
 		<h3>Stay Connected from Home</h3>
 		<h2>Live Cams</h2>
 		<p>Check in on some of your favorite animals while you stay safe at home. Turn the volume up and enjoy the sights and sounds of the parks.</p>
+		<p class="type-small">Due to excessive website or network traffic, individual video feeds may experience load or resolution delays and in some cases may freeze or not display. Please be patient while the page loads and refresh the page as necessary.</p>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Dn6nON8SjP?autoplay=1" allowfullscreen></iframe>
