--- a/cams-landing-page.html
+++ b/cams-landing-page.html
@@ -1,11 +1,14 @@
 <!-- Intro -->
 
-<link rel="stylesheet" href="https://s3.amazonaws.com/wcs-cms/bz-zootopia.css">
+<link rel="stylesheet" href="https://s3.amazonaws.com/wcs-cms/bz-zootopia.css?ver=1.1">
 <div class="zootopia-intro">
 	<h3>Stay Connected from Home</h3>
 	<h2>Live Cams</h2>
-	<p>Check in on some of your favorite animals while you stay safe at home. Turn the volume up and enjoy the sights and sounds of the parks.</p>
-	<p class="type-small">Due to excessive website or network traffic, individual video feeds may experience load or resolution delays and in some cases may freeze or not display. Please be patient while the page loads and refresh the page as necessary.</p>
+	<p class="zootopia-cams__intro">Enjoy the sights and sounds of the parks while you stay safe at home. If you’d like to buy a Membership or tickets for a future visit, we would appreciate your support now more than ever</p>
+	<p class="zootopia-cams__note">Due to excessive website or network traffic, individual video feeds may experience load or resolution delays and in some cases may freeze or not display. Please be patient while the page loads and refresh the page as necessary.</p>
+	<p class="zootopia-cams__sponsored">
+		<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/27/76rdrehle5_boa_sponsored_by.png" alt="Sponsored by Bank of America">
+	</p>
 </div>
 
 <!-- BZ Section -->
@@ -16,12 +19,21 @@
 		<p>Check out a few of our favorite hotspots at the zoo, the sea lions on Astor Court, the lemurs at Madagascar!, and the little penguin exhibit inside the Aquatic Bird House. Be sure to turn your volume up!</p>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
-				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Dn6nON8SjP?autoplay=1" allowfullscreen></iframe>
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/wmfmcwCvux?autoplay=1" allowfullscreen></iframe>
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Sea Lion Pool</h3>
 			<p>Tune into feedings daily at 11:00am and 3:00pm EDT</p>
+		</div>
+		<div class="zootopia-cams__feed">
+			<div class="aspect-16-9 relative">
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/T1Wlj84WMW?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+			</div>
+			<h3>Madagascar!</h3>
+			<p>Start your day with lemurs at 10 am EDT!<br><span class="type-small">You may have to refresh your page to start the feed.</span></p>
 		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
@@ -32,14 +44,6 @@
 			<h3>Aquatic Bird House</h3>
 			<p>Tune into feedings daily at 12:30pm and 3:30pm EDT</p>
 		</div>
-		<div class="zootopia-cams__feed">
-			<div class="aspect-16-9 relative">
-				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/T1Wlj84WMW?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
-			</div>
-			<h3>Madagascar!</h3>
-		</div>
 	</div>
 </div>
 
@@ -49,6 +53,14 @@
 	<div class="container">
 		<h2>New York Aquarium</h2>
 		<p>Transport yourself to Ocean Wonders: Sharks! and you’ll be mesmerized by sharks, sturgeon, and rays. Or enjoy a sneak peek of our newest exhibit, Spineless, featuring the giant Pacific octopus.</p>
+		<div class="zootopia-cams__feed zootopia-cams__feed--down">
+			<div class="aspect-16-9 relative">
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/ooqUPX0Pkt?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/05/01/36tddf8t5i_live_cam_sea_otter_off.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/05/01/2bvdaeqatr_live_cam_sea_otter.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+			</div>
+			<h3>Sea Cliffs</h3>
+		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Tpts9NCJb9?autoplay=1" allowfullscreen></iframe>
