--- a/updates.html
+++ b/updates.html
@@ -2,15 +2,15 @@
 	<div class="container">
 		<div class="zootopia-updates__media">
 			<div class="aspect-16-9 relative">
-				<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fbronxzoo%2Fvideos%2F707388676466124%2F&show_text=0&width=560" width="100%" height="100%" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+				<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fbronxzoo%2Fvideos%2F987394371675563%2F&show_text=0&width=560" width="100%" height="100%" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
 			</div>
 		</div>
 		<div class="zootopia-updates__left">
 			<h3>The Latest</h3>
-			<h2>Camel Barn</h2>
+			<h2>African Wild Dogs</h2>
 		</div>
 		<div class="zootopia-updates__right">
-			<p>Time for another virtual trip to the zoo, this time to the camel barn with our keeper, Fausto!</p>
+			<p>Hello from the African wild dog exhibit! Enjoy a look at these curious canines as a mid-week treat.</p>
 		</div>
 		<hr>
 		<div class="zootopia-updates__left zootopia-updates__left--previous-posts">
