--- a/zoodles.html
+++ b/zoodles.html
@@ -16,6 +16,6 @@
 			<div class="zootopia-zoodles__previous__container">
 			</div>
 		</div>
-		<p class="--is-hidden"><a href="#" class="btn-fill-tiger">View More</a>
+		<p><a href="#" class="btn-fill-tiger">View More</a></p>
 	</div>
 </div>
