--- a/cams.html
+++ b/cams.html
@@ -2,16 +2,19 @@
 	<div class="container">
 		<h3>Stay Connected from Home</h3>
 		<h2>Live Cams</h2>
-		<p>Check in on some of your favorite animals while you stay safe at home. Turn the volume up and enjoy the sights and sounds of the parks.</p>
-		<p class="type-small">Due to excessive website or network traffic, individual video feeds may experience load or resolution delays and in some cases may freeze or not display. Please be patient while the page loads and refresh the page as necessary.</p>
+		<p class="zootopia-cams__sponsored">
+			<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/27/76rdrehle5_boa_sponsored_by.png" alt="Sponsored by Bank of America">
+		</p>
+		<p class="zootopia-cams__intro">Check in on some of your favorite animals while you stay safe at home. Turn the volume up and enjoy the sights and sounds of the parks.</p>
+		<p class="zootopia-cams__note">Due to excessive website or network traffic, individual video feeds may experience load or resolution delays and in some cases may freeze or not display. Please be patient while the page loads and refresh the page as necessary.</p>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
-				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/Dn6nON8SjP?autoplay=1" allowfullscreen></iframe>
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/95ij13t6nm_sea_lion_revised.jpg" align="Our cameras are currently offline. Please check back later">
-				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/T1Wlj84WMW?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
-			<h3>Sea Lion Pool</h3>
-			<p>Tune into feedings daily at 11:00am and 3:00pm EDT</p>
+			<h3>Madagascar!</h3>
+			<p>Start your day with lemurs at 10 am EDT!<br><span class="type-small">You may have to refresh your page to start the feed.</span></p>
 		</div>
 		<div class="zootopia-cams__feed">
 			<div class="aspect-16-9 relative">
