--- a/intro.html
+++ b/intro.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="https://s3.amazonaws.com/wcs-cms/bz-zootopia.css">
+<link rel="stylesheet" href="https://s3.amazonaws.com/wcs-cms/bz-zootopia.css?ver=1.1">
 <div class="zootopia-intro">
 	<h3>Bringing the Animals to You</h3>
 	<h2>Virtual Zoo</h2>
 	<p>We know you love the Bronx Zoo, New York Aquarium, Central Park Zoo, Queens Zoo, and Prospect Park Zoo as much as we do. That's why we’re bringing the best of them to you! Be sure to bookmark this page so you can check in on all the content we’ll be sharing. Thank you for your continued support, now more than ever.</p>
-	<p><a href="https://secure.wcs.org/donate/show-up-for-the-zoo" class="btn-fill-tiger btn-large">Support the Zoo</a>
+	<p><a href="https://bronxzoo.com/shop/catalogs/bronx-zoo-tickets" class="btn-fill-tiger btn-large">Support the Zoo</a>
 </div>
