--- a/cams-landing-page.html
+++ b/cams-landing-page.html
@@ -52,7 +52,7 @@
 <div class="zootopia-cams zootopia-cams--park color-polar fill-ocean">
 	<div class="container">
 		<h2>New York Aquarium</h2>
-		<p>Transport yourself to Ocean Wonders: Sharks! and you’ll be mesmerized by sharks, sturgeon, and rays. Or enjoy a sneak peek of our newest exhibit, Spineless, featuring the giant Pacific octopus.</p>
+		<p>Transport yourself to Ocean Wonders: Sharks! and be mesmerized by sharks, sturgeon, and rays. Or visit Sea Cliffs and spend some quality time with the sea otters!</p>
 		<div class="zootopia-cams__feed zootopia-cams__feed--down">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/ooqUPX0Pkt?autoplay=1" allowfullscreen></iframe>
