--- a/cams.html
+++ b/cams.html
@@ -1,22 +1,39 @@
-<div class="zootopia-cams fill-paper fill-cloud">
+<div class="zootopia-cams">
 	<div class="container">
-		<h3>Stay Connected from Home</h3>
-		<h2>Live Cams</h2>
-		<p class="zootopia-cams__sponsored">
-			<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/27/76rdrehle5_boa_sponsored_by.png" alt="Sponsored by Bank of America">
-		</p>
-		<p class="zootopia-cams__intro">Check in on some of your favorite animals while you stay safe at home. Turn the volume up and enjoy the sights and sounds of the parks.</p>
-		<p class="zootopia-cams__note">Due to excessive website or network traffic, individual video feeds may experience load or resolution delays and in some cases may freeze or not display. Please be patient while the page loads and refresh the page as necessary.</p>
-		<div class="zootopia-cams__feed">
+		<div class="zootopia-cams__main">
+			<div class="aspect-16-9 relative">
+				<iframe type="text/html" frameborder="0" width="100%" height="100%" src="//video.nest.com/embedded/live/T1Wlj84WMW?autoplay=1" allowfullscreen></iframe>
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
+			</div>
+		</div>
+		<div class="zootopia-cams__left">
+			<h3>Stay Connected</h3>
+			<h2>Live from Home</h2>
+			<p class="zootopia-cams__left__sponsored">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/27/76rdrehle5_boa_sponsored_by.png" alt="Sponsored by Bank of America">
+			</p>
+		</div>
+		<div class="zootopia-cams__right">
+			<p>Check out a few of our favorite hotspots at the zoo, the sea lions on Astor Court, the lemurs at Madagascar!, and the little penguin exhibit inside the Aquatic Bird House. Be sure to turn your volume up!</p>
+		</div>
+		<hr>
+		<div class="zootopia-cams__left zootopia-cams__left--more-cams">
+			<h3>View More Cams</h3>
+		</div>
+		<div class="zootopia-cams__right">
+			<h3 style="visibility:hidden;">View More Cams</h3>
+		</div>
+		<div class="zootopia-cams__feed zootopia-cams__feed__left">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/T1Wlj84WMW?autoplay=1" allowfullscreen></iframe>
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/3ipnqag1ke_spiny_revised.jpg" align="Our cameras are currently offline. Please check back later">
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/02/iq7h3t6rn_spiny_forest.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<h3>Madagascar!</h3>
-			<p>Start your day with lemurs at 10 am EDT!<br><span class="type-small">You may have to refresh your page to start the feed.</span></p>
+			<p>Start your day with lemurs at 10 am EDT!</p>
 		</div>
-		<div class="zootopia-cams__feed">
+		<div class="zootopia-cams__feed zootopia-cams__feed__right">
 			<div class="aspect-16-9 relative">
 				<iframe type="text/html" frameborder="0" width="480" height="394" src="//video.nest.com/embedded/live/7r0bBuEdpu?autoplay=1" allowfullscreen></iframe>
 				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/934mtctshq_little_blue_cam.jpg" align="Our cameras are currently offline. Please check back later">
@@ -25,6 +42,8 @@
 			<h3>Aquatic Bird House</h3>
 			<p>Tune into feedings daily at 12:30pm and 3:30pm EDT</p>
 		</div>
-		<p><a href="/virtual-zoo/live-cams" class="btn-fill-tiger">View More</a>
+		<div class="zootopia-cams__note">
+			<p>Due to excessive website or network traffic, individual video feeds may experience load or resolution delays and in some cases may freeze or not display. Please be patient while the page loads and refresh the page as necessary.</p>
+		</div>
 	</div>
 </div>
