--- a/feeds.html
+++ b/feeds.html
@@ -8,7 +8,7 @@
 				<h3>Madagascar!</h3>
 				<h2>Spiny Forest</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-				<p><a href="#" class="zootopia-feeds__item__toggle">Watch Now</a></p>
+				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
 		<div class="zootopia-feeds__item zootopia-feeds__item__toggle" data-feed="https://relay.ozolio.com/pub.api?cmd=embed&oid=EMB_HEQL00000278">
@@ -19,7 +19,7 @@
 				<h3>JungleWorld</h3>
 				<h2>Ebony Langurs</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-				<p><a href="#" class="zootopia-feeds__item__toggle">Watch Now</a></p>
+				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
 		<div class="zootopia-feeds__item zootopia-feeds__item__toggle" data-feed="https://relay.ozolio.com/pub.api?cmd=embed&oid=EMB_ZCWV00000250">
@@ -30,29 +30,31 @@
 				<h3>Sea Bird Aviary</h3>
 				<h2>Black-footed Penguins</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-				<p><a href="#" class="zootopia-feeds__item__toggle">Watch Now</a></p>
+				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
 		<div class="zootopia-feeds__item zootopia-feeds__item__toggle" data-feed="https://video.nest.com/embedded/live/wmfmcwCvux?autoplay=1">
 			<div class="zootopia-feeds__item__image" style="background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/10/9dtg6tuv8y_live_cam_sea_lions_still.jpg');">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/08/6kefqqy4bu_sea_lion.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<div class="zootopia-feeds__item__park">Bronx Zoo</div>
 			<div class="zootopia-feeds__item__content">
 				<h3>Astor Court</h3>
 				<h2>Sea Lion Pool</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-				<p><a href="#" class="zootopia-feeds__item__toggle">Watch Now</a></p>
+				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
 		<div class="zootopia-feeds__item zootopia-feeds__item__toggle" data-feed="https://video.nest.com/embedded/live/Tpts9NCJb9?autoplay=1">
 			<div class="zootopia-feeds__item__image" style="background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/10/4egda73qp3_live_cam_ows_still.jpg');">
+				<img src="https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/04/13/71jrfiovkd_live_cam_shark.jpg" align="Our cameras are currently off. Please check back at 10:00am 4:00pm ET">
 			</div>
 			<div class="zootopia-feeds__item__park">New York Aquarium</div>
 			<div class="zootopia-feeds__item__content">
 				<h3>Ocean Wonders: Sharks!</h3>
 				<h2>Canyon's Edge</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-				<p><a href="#" class="zootopia-feeds__item__toggle">Watch Now</a></p>
+				<p><a href="#">Watch Now</a></p>
 			</div>
 		</div>
 	</div>
